--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: sally008
-head: sally008
+title: sarah-allec
+head: sarah-allec
 author: Sarah Allec
 description: 
 ---
